# toy-robust-backend-slam

./: README.md
DCS-ceres/: CMakeLists.txt  do_build.sh  main.cpp
DCS-ceres/docs/CSAIL/: info.txt
DCS-ceres/docs/INTEL/: info.txt
DCS-ceres/drawer/: do_plot.sh  plot_results.py
DCS-ceres/include/: ceres_error.h  g2o_util.h  graph.h
DCS-ceres/save/: init_edges.txt  init_nodes.txt
DCS-ceres/src/: ceres_error.cpp  g2o_util.cpp  graph.cpp
